--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "TestReg"
 uuid = "914fd8de-29fd-11e9-0a06-012b13fb43aa"
 authors = ["nkottary <kottarynishanth54@gmail.com>"]
 version = "1.0.2"
+
+[compat]
+PyCall = "≥ 1.16"
+julia = "0.7, 1.0"
