--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "914fd8de-29fd-11e9-0a06-012b13fb43aa"
 authors = ["nkottary <kottarynishanth54@gmail.com>"]
 version = "1.0.2"
 
+[deps]
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
+
 [compat]
 PyCall = "≥ 1.16"
 julia = "0.7, 1.0"
