--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,9 @@ name = "TestReg"
 uuid = "914fd8de-29fd-11e9-0a06-012b13fb43aa"
 authors = ["nkottary <kottarynishanth54@gmail.com>"]
 version = "1.0.2"
+
+[compat]
+JSON = "0.20"
+
+[extras]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
