add ACME & JSON as deps

--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,10 @@ uuid = "914fd8de-29fd-11e9-0a06-012b13fb43aa"
 authors = ["nkottary <kottarynishanth54@gmail.com>"]
 version = "1.0.2"
 
+[deps]
+ACME = "ca8b7239-ccd3-5cce-807f-2072f3f0d108"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+
 [compat]
 JSON = "0.20"
-
-[extras]
-JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+ACME = "≥ 0.7.1"
