--- a/Project.toml
+++ b/Project.toml
@@ -8,5 +8,5 @@ ACME = "ca8b7239-ccd3-5cce-807f-2072f3f0d108"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 
 [compat]
-JSON = "0.20"
-ACME = "≥ 0.7.1"
+JSON = "0.20, 0.21, 0.23"
+ACME = "0.7, 0.8"
